usecase-7/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: healthcare-service
  namespace: medical

spec:
  selector:
    app: healthcare
    tier: backend
    departement: medical

  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  - protocol: TCP
    port: 3001
    targetPort: 3001
